--- a/CustomMapCreation.ipynb
+++ b/CustomMapCreation.ipynb
@@ -719,14 +719,19 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ArcGISPro",
-   "language": "Python",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
    "file_extension": ".py",
    "name": "python",
-   "version": "3"
+   "version": "3.9.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ce21b655b4d6c9e397d5ad93d5666c623f49909f6d0cc2f72076dafcf1b3ecfb"
+   }
   }
  },
  "nbformat": 4,
