--- a/Courts/Courts_Prod_Items.ipynb
+++ b/Courts/Courts_Prod_Items.ipynb
@@ -2,57 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
     "from arcgis.mapping import WebMap\n",
-    "gis = GIS('HOME')\n",
+    "gis = GIS('https://www.jdart.uscourts.gov/arcgis', \"ao_admin\")\n",
     "import csv\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div class=\"9item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
-       "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
-       "                       <a href='https://bhorne1.esri.com/portal//home/group.html?id=06ff667617db4f57b9448e1e85173fc0' target='_blank'>\n",
-       "                        <img src='https://bhorne1.esri.com/portal//home/images/group-no-image.png' class=\"itemThumbnail\">\n",
-       "                       </a>\n",
-       "                    </div>\n",
-       "\n",
-       "                    <div class=\"item_right\" style=\"float: none; width: auto; overflow: hidden;\">\n",
-       "                        <a href='https://bhorne1.esri.com/portal//home/group.html?id=06ff667617db4f57b9448e1e85173fc0' target='_blank'><b>Field Map Testing</b>\n",
-       "                        </a>\n",
-       "                        <br/>\n",
-       "                        <br/><b>Summary</b>: None\n",
-       "                        <br/><b>Description</b>: None\n",
-       "                        <br/><b>Owner</b>: bhorne\n",
-       "                        <br/><b>Created</b>: December 01, 2021\n",
-       "\n",
-       "                    </div>\n",
-       "                </div>\n",
-       "                "
-      ],
       "text/plain": [
-       "<Group title:\"Field Map Testing\" owner:bhorne>"
+       "'ao_admin'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TI_Field_Maps = gis.groups.search('Field Map Testing')\n",
-    "TI_Field_Maps[0]\n"
+    "userid = \"ao_admin\"\n",
+    "userid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Item title:\"Active and Imminent Incidents\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"Administrative Office (AO) Application Gallery\" type:Web Experience owner:ao_admin>,\n",
+       " <Item title:\"Administrative Office (Thurgood Marshall Federal Judiciary) Building\" type:Mobile Map Package owner:ao_admin>,\n",
+       " <Item title:\"AKX - Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AKX - Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AKX Application Gallery\" type:Web Experience owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Facility Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Facility Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AKX JDART Dashboard - Combined Dashboards\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"AKX Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"AKX Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"AKX Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALM - Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALM - Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALM - Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALM Application Gallery\" type:Web Experience owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Facility Reporting CUE Viewer\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Facility Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALM JDART Dashboard - Combined Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"ALM Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"ALM Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALM TEST\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALN - Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALN - Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALN - Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALN Application Gallery\" type:Web Experience owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Facility Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Facility Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALN Dashboard - Combined Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"ALN Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"ALN Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALS - Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALS - Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"ALS - Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Facility Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Facility Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"ALS Dashboard - Combined Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"ALS Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"ALS Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"Analyst Incident Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"Analyst Resources Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Facility Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Facility Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Courts Reporting Views - Public View - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Alert Status Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Earthquakes Alert Status Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Power Outage Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Severe Weather Alert Status Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Tropical Storm Alert Status Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART - Wildfires  Alert Status Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO JDART Dashboard - Combined Dashboards\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"AO Judiciary Security Division - JDART - Power Outage\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"AO Offices - Counties\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Offices - Location Boundaries\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"AO Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"AO Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"AO Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"AO Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"AO Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"Applications\" type:Image owner:ao_admin>,\n",
+       " <Item title:\"Archived Threats\" type:File Geodatabase owner:ao_admin>,\n",
+       " <Item title:\"Blue Sky Application\" type:Web Experience owner:ao_admin>,\n",
+       " <Item title:\"Blue Sky Incident Feed\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"Blue Sky Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"Boundary Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"Buffer_of_World_Nuclear_Power_Plant\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"Buffer_of_World_Nuclear_Power_Plant\" type:Service Definition owner:ao_admin>,\n",
+       " <Item title:\"CAC - Public View - Survey Reporting - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"CAC - Survey Review App\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"CAC - Survey Review App - Web Map\" type:Web Map owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Employee Safety Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Employee Safety Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Facility Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Facility Reporting Public View1\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Incident Reporting CUE View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC Courts Incident Reporting Public View\" type:Feature Layer Collection owner:ao_admin>,\n",
+       " <Item title:\"CAC JDART Dashboard - Combined Dashboard\" type:Dashboard owner:ao_admin>,\n",
+       " <Item title:\"CAC Reporting Viewer\" type:Code Attachment owner:ao_admin>,\n",
+       " <Item title:\"CAC Reporting Viewer\" type:Web Mapping Application owner:ao_admin>,\n",
+       " <Item title:\"CAC_Courts_Facility_Reporting_Public_View\" type:Feature Layer Collection owner:ao_admin>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rootcontent = gis.content.advanced_search(query='owner:AO_ADMIN')\n",
+    "resutls = rootcontent[\"results\"]\n",
+    "resutls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'folders'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-543f5b9b2519>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfolders\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0muserid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfolders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mfolders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'folders'"
+     ]
+    }
+   ],
+   "source": [
+    "folders = userid.folders\n",
+    "folders"
    ]
   },
   {
@@ -80,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,19 +212,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'list{id}'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-57e57a35b2af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;31m# for i in itemd:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;31m#     print(i)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mdependent_to\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdependent_to\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"list{id}\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[1;31m# print(i[\"id\"])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         dataWriter.writerow([\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'list{id}'"
+     ]
+    }
+   ],
    "source": [
-    "with open('C:/Users/bob10704/Desktop/CBP EGIS/CSV_Transfer.xlsx'.format(dt_string), 'w') as output:\n",
+    "with open(r'C:/Users/bob10704/Desktop/Projects/1.Active Projects/US Courts/CSV_Transfer.csv'.format(dt_string), 'w') as output:\n",
     "    dataWriter = csv.writer(output, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
     "    dataWriter.writerow(['Title',\n",
-    "                         'Item ID'])\n",
-    "    for item in fieldmaps:\n",
-    "        if item.title.startswith(\"TI\"):\n",
-    "            dataWriter.writerow([\n",
-    "                item.title,\n",
-    "                item.id\n",
+    "                         'Item ID',\n",
+    "                         'Item Type',\n",
+    "                         'Item Dep To',\n",
+    "                         'Item Dep Upon'])\n",
+    "    for item in resutls:\n",
+    "        # if item.title.startswith(\"TI\"):\n",
+    "        # itemd = item.depend_type\n",
+    "        # for i in itemd:\n",
+    "        #     print(i)\n",
+    "        dependent_to = item.dependent_to()[\"list{id}\"]\n",
+    "        # print(i[\"id\"])\n",
+    "        dataWriter.writerow([\n",
+    "            item.title,\n",
+    "            item.id,\n",
+    "            item.type,\n",
+    "            dependent_to,\n",
+    "            item.dependent_upon()[\"list{id}\"]\n",
     "            ])"
    ]
   },
@@ -116,14 +261,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ArcGISPro",
-   "language": "Python",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ce21b655b4d6c9e397d5ad93d5666c623f49909f6d0cc2f72076dafcf1b3ecfb"
+   }
   }
  },
  "nbformat": 4,
