--- a/Courts/Courts_Prod_Items.ipynb
+++ b/Courts/Courts_Prod_Items.ipynb
@@ -10,7 +10,9 @@
     "from arcgis.mapping import WebMap\n",
     "gis = GIS('https://www.jdart.uscourts.gov/arcgis', \"ao_admin\")\n",
     "import csv\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "dt_string = now.strftime(\"%Y%m%d_%H%M%S\")"
    ]
   },
   {
@@ -157,58 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'folders'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-543f5b9b2519>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfolders\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0muserid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfolders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mfolders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'folders'"
-     ]
-    }
-   ],
-   "source": [
-    "folders = userid.folders\n",
-    "folders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Item title:\"DefQueryTesting\" type:Web Map owner:bhorne>, <Item title:\"DefQueryTesting - Missouri Sector\" type:Web Map owner:bhorne>, <Item title:\"GeometryTesting\" type:Feature Layer Collection owner:bhorne>, <Item title:\"GeometryTesting_map2\" type:Feature Layer Collection owner:bhorne>, <Item title:\"GeometryTesting_Take3\" type:Feature Layer Collection owner:bhorne>, <Item title:\"OfflineLayerTest\" type:Feature Layer Collection owner:bhorne>, <Item title:\"OfflineLayerTest\" type:Map Image Layer owner:bhorne>, <Item title:\"RelationshipTest\" type:Feature Layer Collection owner:bhorne>, <Item title:\"Tactical Infrastructure Field Collection_MIL1\" type:Feature Layer Collection owner:bhorne>, <Item title:\"TI Field Collection - Big Bend Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Blaine Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Buffalo Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Del Rio Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Detroit Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - El Centro Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - El Paso Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Grand Forks Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Havre Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Houlton Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Laredo Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Miami Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - New Orleans Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Ramey Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Rio Grande Valley Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - San Diego Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Spokane Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Swanton Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Tucson Sector\" type:Web Map owner:bhorne>, <Item title:\"TI Field Collection - Yuma Sector\" type:Web Map owner:bhorne>]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fieldmaps = TI_Field_Maps[0].content()\n",
-    "fieldmaps"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "now = datetime.now()\n",
-    "dt_string = now.strftime(\"%Y%m%d_%H%M%S\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
