--- a/Courts/Courts_Prod_Items.ipynb
+++ b/Courts/Courts_Prod_Items.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "'ao_admin'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        " <Item title:\"CAC_Courts_Facility_Reporting_Public_View\" type:Feature Layer Collection owner:ao_admin>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,28 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'list{id}'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-38-57e57a35b2af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;31m# for i in itemd:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;31m#     print(i)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mdependent_to\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdependent_to\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"list{id}\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[1;31m# print(i[\"id\"])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         dataWriter.writerow([\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'list{id}'"
-     ]
-    }
-   ],
    "source": [
     "with open(r'C:/Users/bob10704/Desktop/Projects/1.Active Projects/US Courts/CSV_Transfer.csv'.format(dt_string), 'w') as output:\n",
     "    dataWriter = csv.writer(output, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
@@ -194,14 +175,14 @@
     "        # itemd = item.depend_type\n",
     "        # for i in itemd:\n",
     "        #     print(i)\n",
-    "        dependent_to = item.dependent_to()[\"list{id}\"]\n",
+    "        # dependent_to = item.dependent_to()[\"list\"]\n",
     "        # print(i[\"id\"])\n",
     "        dataWriter.writerow([\n",
     "            item.title,\n",
     "            item.id,\n",
     "            item.type,\n",
-    "            dependent_to,\n",
-    "            item.dependent_upon()[\"list{id}\"]\n",
+    "            item.dependent_to()[\"list\"],\n",
+    "            item.dependent_upon()[\"list\"]\n",
     "            ])"
    ]
   },
