--- a/Projects/HHS Take 2/ClonePortal.ipynb
+++ b/Projects/HHS Take 2/ClonePortal.ipynb
@@ -11,42 +11,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username_1 = \"bobby.horne\"\n",
+    "password_1 = \"k#=Q`v6F\"\n",
+    "#For Portal for ArcGIS\n",
+    "gis2=GIS(r\"https://geospatial.hhs.gov/arcgis/\", username_1, password_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "username_1 = input(\"Enter username of source organization: \")\n",
-    "\n",
-    "#For Portal for ArcGIS\n",
-    "gis1=GIS(r\"https://geospatial.hhs.gov/arcgis/\", username_1)"
+    "username_2 = \"Cloud.DataTransfer\"\n",
+    "Password_2 = \"GeoHealth2023!\"\n",
+    "#For ArcGIS Online\n",
+    "gis1 = GIS(r\"https://geohealth.hhs.gov/arcgis\", username_2, Password_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "username_2 = input(\"Enter username of source organization: \")\n",
-    "\n",
-    "#For ArcGIS Online\n",
-    "gis2 = GIS(r\"https://arcgis.com\", username_2)\n"
+    "username_3 = \"bhorne_ps_dbs\"\n",
+    "password_3 = \"78tHbDv5\"\n",
+    "#For Portal for ArcGIS\n",
+    "gis3=GIS(r\"https://ps-dbs.maps.arcgis.com\", username_3, password_3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username_4 = \"bhorne_prof_services\"\n",
+    "Password_4 = \"78thbdv5\"\n",
+    "#For ArcGIS Online\n",
+    "gis4 = GIS(r\"https://prof-services.maps.arcgis.com\", username_4, Password_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Get a specific item using item id:\n",
-    "itemid = 'df590201ee3c4049914f2b8396305366'\n",
-    "items = gis1.content.search(itemid) \n"
+    "itemid = '1b48a1475a0945f2b9871a46b654be17'\n",
+    "items = gis3.content.search(itemid) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -59,10 +83,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Item title:\"Partner Portal Test Site\" type:Site Application owner:Lexi.Mitsuhashi>]"
+       "[<Item title:\"testing to test\" type:Hub Page owner:bhorne_PS_DBS>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning Partner Portal Test Site\n",
-      "Successfully cloned Partner Portal Test Site\n",
+      "Cloning testing to test\n",
+      "Successfully cloned testing to test\n",
       "The function has completed\n"
      ]
     }
@@ -94,7 +118,7 @@
     "            print(\"Cloning \" + item.title)\n",
     "            copy_list = []\n",
     "            copy_list.append(item)\n",
-    "            gis2.content.clone_items(copy_list, copy_data=True, search_existing_items=True)\n",
+    "            gis4.content.clone_items(copy_list, copy_data=True, search_existing_items=True)\n",
     "            print(\"Successfully cloned \" + item.title)\n",
     "        except Exception as e:\n",
     "            print(e)\n",
